add getAlltags
