# src/infra/controllers/TagController.ts
@@ -1,4 +1,5 @@
 import CreateTagUseCase from '../../application/usecases/CreateTag';
+import GetAllTagsUseCase from '../../application/usecases/GetAllTags';
 import GetTagUseCase from '../../application/usecases/GetTagById';
 import HttpServer from '../http/HttpServer';
 import AuthMiddleware from '../http/middlewares/AuthMiddleware';
@@ -7,7 +8,8 @@ export default class TagController {
   constructor(
     private httpServer: HttpServer,
     private createTagUseCase: CreateTagUseCase,
-    private getTagsUseCase: GetTagUseCase,
+    private getTagUseCase: GetTagUseCase,
+    private getAllTagsUseCase: GetAllTagsUseCase,
     private authMiddleware: AuthMiddleware
   ) {
     this.httpServer.register(
@@ -23,7 +25,16 @@ export default class TagController {
       '/tags/:id',
       async (params: any, body: any) => {
         const { id } = params;
-        return await this.getTagsUseCase.execute(id);
+        return await this.getTagUseCase.execute(id);
+      },
+      [this.authMiddleware]
+    );
+
+    this.httpServer.register(
+      'get',
+      '/tags',
+      async (params: any, body: any) => {
+        return await this.getAllTagsUseCase.execute();
       },
       [this.authMiddleware]
     );
